--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: benpetit
   instagram:
   linkedin: https://www.linkedin.com/in/benjamin-petit-15758111b/
   pinterest:
