--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: benpetit
   instagram:
-  linkedin: https://www.linkedin.com/in/benjamin-petit-15758111b/
+  linkedin: benjamin-petit-15758111b
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
