--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Benjamin Petit
 description: Graduate student in CS and Applied Mathematics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/38189513?s=460&v=4
 
 #
 # Flags below are optional
